--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+  <form  class="search">
+    <input class="input" name="field" >
+    <button class="submit" type="submit">Submit</button>
+  </form>
 
     <script type="module" src="./main.js"></script>
   </body>
