--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
     <input class="input" name="field" >
     <button class="submit" type="submit">Submit</button>
   </form>
-
+  <div class="pictures">
+  </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
