--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-  <form  class="search">
-    <input class="input" name="field" >
-    <button class="submit" type="submit">Submit</button>
-  </form>
-  <div class="pictures">
-  </div>
+    <form class="search">
+      <input class="input" name="field" />
+      <button class="submit" type="submit">Submit</button>
+    </form>
+    <div class="loader"></div>
+    <ul class="pictures"></ul>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
