--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form class="search">
-      <input class="input" name="field" />
-      <button class="submit" type="submit">Submit</button>
-    </form>
-    <div class="loader"></div>
-    <ul class="pictures"></ul>
+    <div class="app">
+      <form class="search">
+        <input class="input" name="query" placeholder="Search images..."/>
+        <button class="submit" type="submit">Search</button>
+      </form>
+      <div class="loader"></div>
+      <ul class="pictures"></ul>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
